--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2cf63ae5-7f83-4c28-8eb5-16f92c943ef2"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
